# oktopus

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile.block-worker  Dockerfile.builder  Dockerfile.cid-worker  Dockerfile.directory-worker  Dockerfile.file-worker  Dockerfile.hamtshard-worker  Dockerfile.oldbuilder  README.md  build-in-docker.sh  build.rs
analysis/: .env  connect_to_db.sh  docker-compose.yml
analysis/import/: .dockerignore  .gitignore  Dockerfile.diesel  README.md  clear_schema_public.sql  import.sh  import.sql  move_analysis_schema_to_public.sql  move_public_schema_to_analysis_if_not_exists.sql  set_up_consistency_triggers.sql
analysis/plotting/: .gitignore  base_setup.R  do_stuff.R  ipfs_constants.R  plot_setup.R  run-all-csv-queries.sh  run-csv-query.sh  table_setup.R
analysis/plotting/queries/: all-file-hashes-with-mime-types.sql  (+22 more)
docker-compose/: .env  .gitignore  001_configure_ipfs.sh  002_configure_second_daemon_addresses.sh  README.md  all_stats.sh  connect_to_db.sh  docker-compose.yml  dump_db.sh  feed-traces.sh  feed-yesterdays-traces.sh  init_db.sh  mime_type_counts.sql  notifier_config.yaml  prometheus.yml  rabbitmq.conf  redis.conf  run-csv-query.sh  select_all_cids.sql  select_all_directory_entries.sql  select_cids_and_mime_types.sql  select_cids_by_mime_type.sql  select_cids_by_mime_type_slow.sql  select_visual_file_hashes.sh  select_visual_file_hashes.sql  spawn_shell.sh  start-file-worker.sh  stats.sql  storage_usage.sql
docker-compose/grafana/: dashboards.yml  datasources.yml
migrations/2022-07-31-132931_initial_setup/: down.sql  up.sql
migrations/2022-10-12-122051_index_file_size/: down.sql  up.sql
migrations/2022-10-19-084339_split_alternative_cids_pkey/: down.sql  up.sql
migrations/2022-10-20-154459_add_libmime_mime_type/: down.sql  up.sql
migrations/2023-02-11-095123_track_download_durations/: down.sql  up.sql
migrations/2023-02-17-100517_rename_libmime_mime_type/: down.sql  up.sql
migrations/2023-02-28-124244_rename_libmime_dummy_mime_type/: down.sql  up.sql
pb/: unixfs.proto
src/: cache.rs  db.rs  hash.rs  ipfs.rs  lib.rs  models.rs  prom.rs  queue.rs  redis.rs  schema.rs
(+4 files in other folders)
