[package]
name = "ipfs-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["rt-multi-thread", "net", "sync", "macros", "io-std"] }
anyhow = "1.0.65"
futures-util = "0.3.21"
http = "0.2.8"
hyper = "0.14"
thiserror = "1.0.31"
chrono = { version = "0.4.19" , features = ["serde"]}
lazy_static = "1.4.0"
dotenvy = "0.15"
hex = "0.4"

## Database stuff
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
diesel_migrations = "2.0.0"
# Connection pool, waiting on https://github.com/bikeshedder/deadpool/issues/220
#deadpool-diesel = { version = "0.4.0", features = ["postgres"] }

## IPFS stuff
# IPFS API client
ipfs-api-backend-hyper = { git = "https://github.com/mrd0ll4r/rust-ipfs-api.git", branch = "hyper-connection-pool", features = ["with-send-sync"], default-features = false }
cid = { version = "0.8.5", features = ["serde-codec"] }
# Multihash, to parse hashes stored in the database
multihash = { version = "0.16.3" }
# Reqwest, to download file data via the IPFS HTTP Gateway
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls", "stream"] }

## MIME detectors
tree_magic_mini = "3.0.3"
magic = "0.13"

## Serde
serde = "1.0.145"
serde_json = "1.0.85"

## Logging
log = "^0.4"
flexi_logger = "0.22"

## Prometheus
prometheus_exporter = "0.8.4"
# This needs to be matching the version prometheus_exporter uses!
prometheus = { version = "0.13", features = ["process"] }

## SHA2, to compute hashes for files
sha2 = "0.10.6"

## Protobuf stuff
prost = "0.11.0"
bytes = "1.2.1"

## RabbitMQ client
lapin = { version = "2.1.1", default-features = false, features = ["rustls"] }

## Allows iterating over enums
strum = { version = "0.24.1", features = ["derive"] }

## Redis client
redis = { version = "0.21.6", features = ["tokio-comp"] }

## CLI parser
clap = { version = "3.2.22", features = ["cargo"] }

[build-dependencies]
## Protobuf code generator
prost-build = "0.11.1"
